# Outlays_Reminder

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  outlays.mv.db  outlays.trace.db
.github/: CODEOWNERS
.github/workflows/: backend-tests.yml
backend/: .classpath  .gitignore  .project  HELP.md  README.md  build.gradle  gradlew.bat  settings.gradle
backend/scripts/: .gitignore  README.md  config.example.yml  daily_gmail_fetcher.py  gmail_fetcher.py  import_outlays.py  monthly_gmail_config_builder.py  pyproject.toml  run_gmail_fetcher.ps1  summary_mailer.py
backend/scripts/tests/: test_daily_gmail_fetcher.py  test_summary_mailer.py
backend/src/main/java/jataro/web/outlays_reminder/: OutlaysReminderApplication.java  test.html
backend/src/main/java/jataro/web/outlays_reminder/constants/: ErrorMessages.java
backend/src/main/java/jataro/web/outlays_reminder/controller/: OutlayController.java  TestController.java
backend/src/main/java/jataro/web/outlays_reminder/dto/: OutlayRequest.java
backend/src/main/java/jataro/web/outlays_reminder/entity/: Outlay.java
backend/src/main/resources/: application-example.properties  application.properties  validationMessages.properties
backend/src/test/java/jataro/web/outlays_reminder/: OutlaysReminderApplicationTests.java
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.js
frontend/src/api/: outlayApi.js
frontend/src/components/: Controls.css  Controls.js  Header.css  Header.js  OutlayForm.css  OutlayForm.js  OutlayList.css  OutlayList.js  OutlayManager.js
frontend/src/hooks/: useOutlays.js
(+2 files in other folders)
