[tool.poetry]
name = "outlays-reminder-scripts"
version = "0.1.0"
description = "Utility scripts for pulling Gmail data used by Outlays Reminder."
authors = ["Outlays Reminder Team <devnull@outlays.local>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
google-api-python-client = "^2.149.0"
google-auth = "^2.35.0"
google-auth-oauthlib = "^1.2.1"
python-dateutil = "^2.9.0.post0"
keyring = "^25.5.0"
PyYAML = "^6.0.2"
requests = "^2.32.3"
pytest = "^9.0.1"

[tool.poetry.group.dev.dependencies]
types-python-dateutil = "^2.9.0.20241003"

[tool.poetry.scripts]
gmail-fetch = "gmail_fetcher:main"
outlay-import = "import_outlays:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
